# hello

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  hello.pc.in  helloConfig.cmake.in
docs/: Doxyfile
examples/: greet_example.c
include/hello/: export.h  hello.h  version.h.in
scripts/: coverage.sh  format.sh  lint.sh
src/: hello.c  main.c
tests/: CMakeLists.txt  check_doxygen_coverage.sh  check_exports.sh  test_hello.c
tests/consumer/: CMakeLists.txt  consumer.c
tests/fuzz/: CMakeLists.txt  fuzz_format.c  fuzz_greet.c  hello.dict
tests/fuzz/corpus/: 05_embedded_nul  README.md
